<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_hand_gesture_placeholder"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_translate"
        android:icon="@drawable/ic_camera"
        android:title="@string/nav_translate" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/nav_learn"
        android:icon="@drawable/ic_school"
        android:title="@string/nav_learn" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />
</menu>
